#1382: [pubcore] refactor to support AOT compilation

--- a/Tools/gh-tool/gh-tool.csproj
+++ b/Tools/gh-tool/gh-tool.csproj
@@ -32,4 +32,8 @@
     <ProjectReference Include="..\..\Lib\Neon.Deployment\Neon.Deployment.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
