--- a/Tools/wsl-util/wsl-util.csproj
+++ b/Tools/wsl-util/wsl-util.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\..\Lib\Neon.WSL\Neon.WSL.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
