--- a/Tools/neon-modelgen/neon-modelgen.csproj
+++ b/Tools/neon-modelgen/neon-modelgen.csproj
@@ -31,6 +31,7 @@
 
   <ItemGroup>
     <Folder Include="Properties\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
 
 </Project>
