--- a/Tools/unix-text/unix-text.csproj
+++ b/Tools/unix-text/unix-text.csproj
@@ -33,4 +33,8 @@
     <ProjectReference Include="..\..\Lib\Neon.Common\Neon.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Properties\PublishProfiles\" />
+  </ItemGroup>
+
 </Project>
