add reoader annotation to minio

--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/console-deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/console-deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: {{ include "minio-operator.console-fullname" . }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    reloader.stakater.com/auto: "true"
   labels:
     app: minio
     {{- include "minio-operator.labels" . | nindent 4 }}
