--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-dashboard/templates/deployment.yaml
@@ -11,6 +11,7 @@ spec:
   selector:
     matchLabels:
       {{- include "neon-dashboard.selectorLabels" . | nindent 6 }}
+  priorityClassName: {{ .Values.priorityClassName }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
