--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/tenant.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/tenant.yaml
@@ -81,6 +81,6 @@ spec:
     {{ toYaml . | nindent 4 }}
   {{- end }}
   {{ if .priorityClassName }}
-  priorityClassName: {{ .priorityClassName }}
+  priorityClassName: {{ . }}
   {{ end }}
 {{ end }}
