--- a/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/harbor/templates/deployment.yaml
@@ -22,6 +22,7 @@ spec:
       labels:
         control-plane: harbor-operator
     spec:
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
       - args:
         - --enable-leader-election
