--- a/Lib/Neon.Kube.Setup/Resources/Helm/istio/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/istio/templates/deployment.yaml
@@ -17,6 +17,7 @@ spec:
       tolerations:
         - operator: "Exists"
           effect: "NoSchedule"
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
         - name: istio-operator
           image: {{.Values.images.organization}}/{{.Values.images.operator.repository}}:{{.Values.images.operator.tag}}
