--- a/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/operator-deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/minio/templates/operator-deployment.yaml
@@ -43,6 +43,7 @@ spec:
           secret:
             secretName: minio-client
             defaultMode: 420
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
