--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-node-agent/templates/daemonset.yaml
@@ -42,6 +42,7 @@ spec:
         hostPath:
           path: /
           type: Directory
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
       - name: neon-node-agent
         env:
