--- a/Lib/Neon.Kube.Setup/Resources/Helm/openebs/templates/ndm-cluster-exporter.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/openebs/templates/ndm-cluster-exporter.yaml
@@ -24,6 +24,7 @@ spec:
         {{- end }}
     spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
         - name: {{ template "openebs.ndm-cluster-exporter.fullname" . }}
           image: "{{ .Values.ndmExporter.image.organization }}/{{ .Values.ndmExporter.image.repository }}:{{ .Values.ndmExporter.image.tag }}"
