--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/deployment.yaml
@@ -16,7 +16,7 @@ spec:
         app: neon-acme
     spec:
       serviceAccountName: neon-acme
-      priorityClassName: {{ . }
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
         - name: neon-acme
           image: "{{ .Values.image.organization }}/{{ .Values.image.repository }}:{{ .Values.image.tag }}"
