--- a/Lib/Neon.Kube.Setup/Resources/Helm/openebs/templates/deployment-maya-apiserver.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/openebs/templates/deployment-maya-apiserver.yaml
@@ -32,6 +32,7 @@ spec:
         openebs.io/version: {{ .Values.release.version }}
     spec:
       serviceAccountName: {{ template "openebs.serviceAccountName" . }}
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
       - name: {{ template "openebs.name" . }}-apiserver
         image: "{{ .Values.apiserver.image.organization }}/{{ .Values.apiserver.image.repository }}:{{ .Values.apiserver.image.tag }}"
