--- a/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/postgres-pod-priority-class.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/postgres-operator/templates/postgres-pod-priority-class.yaml
@@ -1,16 +1,21 @@
-{{- if .Values.podPriorityClassName }}
-apiVersion: scheduling.k8s.io/v1
-description: 'Use only for databases controlled by Postgres operator'
-kind: PriorityClass
-metadata:
-  labels:
-    app.kubernetes.io/name: {{ template "postgres-operator.name" . }}
-    helm.sh/chart: {{ template "postgres-operator.chart" . }}
-    app.kubernetes.io/managed-by: {{ .Release.Service }}
-    app.kubernetes.io/instance: {{ .Release.Name }}
-  name: {{ .Values.podPriorityClassName }}
-  namespace: {{ .Release.Namespace }}
-preemptionPolicy: PreemptLowerPriority
-globalDefault: false
-value: 1000000
-{{- end }}
+# $note(jefflill):
+#
+# We're going to use a predefined  neonKUBE priority class so we don't
+# need to create a priority class here.
+
+#{{- if .Values.podPriorityClassName }}
+#apiVersion: scheduling.k8s.io/v1
+#description: 'Use only for databases controlled by Postgres operator'
+#kind: PriorityClass
+#metadata:
+#  labels:
+#    app.kubernetes.io/name: {{ template "postgres-operator.name" . }}
+#    helm.sh/chart: {{ template "postgres-operator.chart" . }}
+#    app.kubernetes.io/managed-by: {{ .Release.Service }}
+#    app.kubernetes.io/instance: {{ .Release.Name }}
+#  name: {{ .Values.podPriorityClassName }}
+#  namespace: {{ .Release.Namespace }}
+#preemptionPolicy: PreemptLowerPriority
+#globalDefault: false
+#value: 1000000
+#{{- end }}
