--- a/Lib/Neon.Kube.Setup/Resources/Helm/redis-ha/templates/redis-haproxy-deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/redis-ha/templates/redis-haproxy-deployment.yaml
@@ -143,7 +143,7 @@ spec:
         lifecycle:
 {{ toYaml .Values.haproxy.lifecycle | indent 10 }}
 {{- if .Values.haproxy.priorityClassName }}
-      priorityClassName: {{ . }}
+      priorityClassName: {{ .Values.priorityClassName }}
 {{- end }}
       volumes:
       - name: config-volume
