--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/daemonset.yaml
@@ -18,6 +18,7 @@ spec:
       hostPID: true
       hostNetwork: true
       dnsPolicy: ClusterFirstWithHostNet
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
       - name: agent
         args:
