--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/deployment.yaml
@@ -20,6 +20,7 @@ spec:
       serviceAccountName: grafana-agent-operator
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
       - name: operator
         image: "{{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}"
