--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/grafanaagent.yaml
@@ -7,6 +7,7 @@ metadata:
     app: grafana-agent
 spec:
   image: "{{ .Values.agent.image.organization }}/{{ .Values.agent.image.repository }}:{{ .Values.agent.image.tag }}"
+  priorityClassName: {{ .Values.priorityClassName }}
   containers:
   - name: grafana-agent
     env:
