--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/grafana.yaml
@@ -69,6 +69,7 @@ spec:
           name: grafana-env
     nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
+    priorityClassName: {{ .Values.priorityClassName }}
   dashboardLabelSelector:
     - matchExpressions:
         - { key: app, operator: In, values: [ grafana ] }
