--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana/templates/operator.yaml
@@ -18,6 +18,7 @@ spec:
       serviceAccount: grafana-operator
       nodeSelector:
       {{- toYaml .Values.nodeSelector | nindent 8 }}
+      priorityClassName: {{ .Values.priorityClassName }}
       containers:
         - name: grafana-operator
           image: {{ .Values.operator.image.organization }}/{{ .Values.operator.image.repository }}:{{ .Values.operator.image.tag }}
