--- a/Services/neon-node-agent/neon-node-agent.csproj
+++ b/Services/neon-node-agent/neon-node-agent.csproj
@@ -40,7 +40,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="KubeOps" Version="6.2.1" />
+    <PackageReference Include="KubeOps" Version="6.2.4" />
     <PackageReference Include="Tomlyn" Version="0.3.1" />
   </ItemGroup>
 
@@ -50,6 +50,10 @@
     <ProjectReference Include="..\..\Lib\Neon.Kube.Operator\Neon.Kube.Operator.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Kube\Neon.Kube.csproj" />
     <ProjectReference Include="..\..\Lib\Neon.Service\Neon.Service.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="config.gitignore\" />
   </ItemGroup>
 
   <!-- 
