--- a/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/certificate-neon-acme.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/neon-acme/templates/certificate-neon-acme.yaml
@@ -6,10 +6,11 @@ metadata:
   labels:
     app: neon-acme
 spec:
-  secretName: neon-acme-ca
-  duration: 43800h # 5y
   issuerRef:
     name: neon-acme-selfsign
+  secretName: neon-acme-ca
+  duration: {{ .Values.certficateDuration }}
+  renewBefore: {{ .Values.certficateRenewBefore }}
   commonName: "ca.neon-acme.neon-ingress"
   isCA: true
 ---
@@ -21,10 +22,11 @@ metadata:
   labels:
     app: neon-acme
 spec:
-  secretName: neon-acme-webhook-tls
-  duration: 8760h # 1y
   issuerRef:
     name: neon-acme-ca
+  secretName: neon-acme-webhook-tls
+  duration: {{ .Values.certficateDuration }}
+  renewBefore: {{ .Values.certficateRenewBefore }}
   dnsNames:
   - neon-acme
   - neon-acme.neon-ingress
