#1443: BREAKING: LocalHyperV renamed and merged with HyperV hosting manager

--- a/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
+++ b/Lib/Neon.Kube.Setup/ClusterDefinitions/neon-desktop.hyperv.cluster.yaml
@@ -6,8 +6,8 @@ timeSources:
 kubernetes:
   allowPodsOnMasters: true
 hosting:
-  environment: hyperv-local
-  hypervLocal:
+  environment: hyperv
+  hyperv:
     neonDesktopBuiltIn: true
     useInternalSwitch: true
   vm:
