--- a/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
+++ b/Lib/Neon.Kube.Setup/Neon.Kube.Setup.csproj
@@ -58,14 +58,17 @@
 		<None Remove="Resources\Helm\minio\templates\console-config-env.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\.helmignore" />
 		<None Remove="Resources\Helm\neon-cluster-operator\Chart.yaml" />
+		<None Remove="Resources\Helm\neon-cluster-operator\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\deployment.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\templates\serviceaccount.yaml" />
 		<None Remove="Resources\Helm\neon-cluster-operator\values.yaml" />
 		<None Remove="Resources\Helm\neon-dashboard\templates\config-env.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\.helmignore" />
 		<None Remove="Resources\Helm\neon-node-agent\Chart.yaml" />
+		<None Remove="Resources\Helm\neon-node-agent\templates\configmap.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\daemonset.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\templates\rbac.yaml" />
+		<None Remove="Resources\Helm\neon-node-agent\templates\serviceaccount.yaml" />
 		<None Remove="Resources\Helm\neon-node-agent\values.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\configmap-metric-exporter.yaml" />
 		<None Remove="Resources\Helm\postgres-operator\templates\neon-system-db.yaml" />
