--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/statefulset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/statefulset.yaml
@@ -105,6 +105,15 @@ spec:
         {{- end }}
         - mountPath: /conf
           name: tempo-query-conf
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+            - weight: 100
+              podAffinityTerm:
+                labelSelector:
+                  matchLabels:
+                    app.kubernetes.io/name: tempo
+                topologyKey: kubernetes.io/hostname
       volumes:
       {{- if .Values.extraVolumes -}}
         {{ toYaml .Values.extraVolumes | nindent 6 }}
