--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/templates/configmap-tempo.yaml
@@ -11,9 +11,23 @@ data:
   tempo.yaml: |
     auth_enabled: {{ .Values.tempo.authEnabled }}
     compactor:
+      ring:
+        kvstore:
+          store: etcd
+          prefix: neonkube.io/tempo/
+          etcd:
+            endpoints:
+              - neon-etcd.neon-system.svc.cluster.local:2379
       compaction:
         compacted_block_retention: {{ .Values.tempo.retention }}
     distributor:
+      ring:
+        kvstore:
+          store: etcd
+          prefix: neonkube.io/tempo/
+          etcd:
+            endpoints:
+              - neon-etcd.neon-system.svc.cluster.local:2379
       receivers:
         {{- toYaml .Values.tempo.receivers | nindent 8 }}
     ingester:
