--- a/Lib/Neon.Kube.Setup/Resources/Helm/tempo/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/tempo/values.yaml
@@ -28,7 +28,17 @@ tempo:
 
   memBallastSizeMbs: 1024
   authEnabled: false
-  ingester: {}
+  ingester:
+    lifecycler:
+      ring:
+      # number of replicas of each span to make while pushing to the backend
+        replication_factor: 1
+        kvstore:
+          store: etcd
+          prefix: neonkube.io/tempo/
+          etcd:
+            endpoints:
+              - neon-etcd.neon-system.svc.cluster.local:2379
   retention: 24h
   server:
     httpListenPort: 3100
@@ -126,7 +136,9 @@ annotations:
   reloader.stakater.com/auto: "true"
 
 ## Pod Annotations
-podAnnotations: []
+podAnnotations:
+  traffic.sidecar.istio.io/excludeInboundPorts: '2379'
+  traffic.sidecar.istio.io/excludeOutboundPorts: '2379'
 
 # -- Volumes to add
 extraVolumes: []
