--- a/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/service.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/grafana-agent/templates/service.yaml
@@ -39,5 +39,9 @@ spec:
     port: 55678
     protocol: TCP
     targetPort: 55678
+  - name: agent-syslog
+    port: 5140
+    protocol: TCP
+    targetPort: 5140
   selector:
     name: grafana-agent-node
