--- a/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/statefulset.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/loki/templates/statefulset.yaml
@@ -78,6 +78,8 @@ spec:
             - name: http-metrics
               containerPort: {{ .Values.config.server.http_listen_port }}
               protocol: TCP
+          startupProbe:
+            {{- toYaml .Values.startupProbe | nindent 12 }}
           livenessProbe:
             {{- toYaml .Values.livenessProbe | nindent 12 }}
           readinessProbe:
