[nuget]: publishing fixes

--- a/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
+++ b/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
@@ -29,6 +29,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
+	  <None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
   </ItemGroup>
 
@@ -36,6 +41,7 @@
     <ProjectReference Include="..\Neon.Common\Neon.Common.csproj" />
     <ProjectReference Include="..\Neon.HyperV\Neon.HyperV.csproj" />
     <ProjectReference Include="..\Neon.Kube.GrpcProto\Neon.Kube.GrpcProto.csproj" />
+    <ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
   </ItemGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
