warning fixes: gRPC proto tweaks

--- a/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
+++ b/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
@@ -44,4 +44,9 @@
 		<ProjectReference Include="..\Neon.Kube\Neon.Kube.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+	</ItemGroup>
+
 </Project>
