--- a/Lib/Neon.CSharp/Neon.CSharp.csproj
+++ b/Lib/Neon.CSharp/Neon.CSharp.csproj
@@ -63,7 +63,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
