--- a/Lib/Neon.Cryptography/Neon.Cryptography.csproj
+++ b/Lib/Neon.Cryptography/Neon.Cryptography.csproj
@@ -70,7 +70,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
