--- a/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
+++ b/Lib/Neon.Kube.BareMetal/Neon.Kube.BareMetal.csproj
@@ -54,7 +54,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
