--- a/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
+++ b/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
@@ -55,7 +55,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
