--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -99,7 +99,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 	<!--
