--- a/Lib/Neon.WinTTY/Neon.WinTTY.csproj
+++ b/Lib/Neon.WinTTY/Neon.WinTTY.csproj
@@ -50,7 +50,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
