--- a/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
+++ b/Lib/Neon.Xunit.Cadence/Neon.Xunit.Cadence.csproj
@@ -58,7 +58,7 @@
 
 	<ItemGroup>
 		<None Include="..\nuget-icon.png" Pack="true" PackagePath="" />
-		<None Include="..\..\LICENSE" Pack="True" PackagePath="" />
+		<None Include="..\..\LICENSE" Pack="true" PackagePath="" />
 	</ItemGroup>
 
 </Project>
