put etcd on masters for now

--- a/Lib/Neon.Kube.Setup/Resources/Helm/etcd/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/etcd/values.yaml
@@ -11,17 +11,17 @@ image:
   repository: "ghcr.io/neonkube-dev/coreos-etcd"
   tag: "neonkube-0.3.0-alpha"
   pullPolicy: "IfNotPresent"
-resources: {}
+resources:
 # We usually recommend not to specify default resources and to leave this as a conscious
 # choice for the user. This also increases chances charts run on environments with little
 # resources, such as Minikube. If you do want to specify resources, uncomment the following
 # lines, adjust them as necessary, and remove the curly braces after 'resources:'.
-# limits:
-#  cpu: 100m
-#  memory: 128Mi
-# requests:
-#  cpu: 100m
-#  memory: 128Mi
+  limits:
+    cpu: 100m
+    memory: 256Mi
+  requests:
+    cpu: 100m
+    memory: 128Mi
 
 # Authentication parameters
 ##
@@ -63,7 +63,7 @@ memoryMode: false
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
 nodeSelector: 
-  neonkube.io/monitor.metrics-internal: "true"
+  neonkube.io/node.role: "master"
 
 tolerations:
   - effect: NoSchedule
