--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -57,7 +57,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<None Remove="Resources\Tools\safe-apt-get.sh" />
+		<EmbeddedResource Include="Resources/**/*" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -103,8 +103,8 @@
 	</ItemGroup>
 
 	<!--
-  Generates the [KubernetesWithRetry.cs] file.
-  -->
+    Generates the [KubernetesWithRetry.cs] file.
+    -->
 
 	<Target Name="K8sWithRetry" BeforeTargets="BeforeBuild" Condition="Exists('$(NF_ROOT)\Tools\prebuilder\bin\$(Configuration)\net6.0\prebuilder.exe')">
 		<Exec Command="$(NF_ROOT)\Tools\prebuilder\bin\$(Configuration)\net6.0\prebuilder generate-kubernetes-with-retry &quot;$(ProjectDir)Kubernetes\KubernetesWithRetry.cs&quot; Neon.Kube" />
