--- a/Lib/Neon.Kube/Neon.Kube.csproj
+++ b/Lib/Neon.Kube/Neon.Kube.csproj
@@ -50,15 +50,15 @@
 		<NoWarn></NoWarn>
 	</PropertyGroup>
 
-	<ItemGroup>
-		<Compile Remove="Properties\**" />
-		<EmbeddedResource Remove="Properties\**" />
-		<None Remove="Properties\**" />
-	</ItemGroup>
+    <ItemGroup>
+        <Compile Remove="Properties\**" />
+        <EmbeddedResource Remove="Properties\**" />
+        <None Remove="Properties\**" />
+    </ItemGroup>
 
-	<ItemGroup>
-		<None Remove="Resources\Tools\safe-apt-get.sh" />
-	</ItemGroup>
+    <ItemGroup>
+        <EmbeddedResource Include="Resources/**/*" />
+    </ItemGroup>
 
 	<ItemGroup>
 		<PackageReference Include="DNS" Version="7.0.0" />
