--- a/Lib/Neon.Couchbase/Neon.Couchbase.csproj
+++ b/Lib/Neon.Couchbase/Neon.Couchbase.csproj
@@ -5,7 +5,7 @@
 		<OutputType>Library</OutputType>
 		<RootNamespace>Neon.Couchbase</RootNamespace>
 		<Authors>neonFORGE Team</Authors>
-		<Version>2.18.2</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Company>neonFORGE LLC</Company>
 		<Product>neonLIBRARY</Product>
 		<Description>Couchbase client extensions</Description>
