--- a/Lib/Neon.Docker/Neon.Docker.csproj
+++ b/Lib/Neon.Docker/Neon.Docker.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<OutputType>Library</OutputType>
 		<RootNamespace>Neon.Docker</RootNamespace>
-		<Version>2.18.2</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Authors>neonFORGE Team</Authors>
 		<Company>neonFORGE LLC</Company>
 		<Description>INTERNAL USE ONLY: Docker REST API wrapper (partially completed)</Description>
