--- a/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
+++ b/Lib/Neon.Kube.DesktopServer/Neon.Kube.DesktopServer.csproj
@@ -1,11 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
 	  <TargetFramework>net6.0</TargetFramework>
 	  <OutputType>Library</OutputType>
 	  <LangVersion>latest</LangVersion>
 	  <IsPackable>true</IsPackable>
-	  <Version>2.10.0-internal</Version>
+	  <Version>10000.0.1650-dev-jeff</Version>
 	  <Company>neonFORGE LLC</Company>
 	  <Product>neonKUBE</Product>
 	  <Description>INTERNAL USE ONLY: Implements the Neon Desktop (gRPC) Service</Description>
