--- a/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
+++ b/Lib/Neon.Kube.GrpcProto/Neon.Kube.GrpcProto.csproj
@@ -5,7 +5,7 @@
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
 		<IsPackable>true</IsPackable>
-		<Version>2.10.0-internal</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Company>neonFORGE LLC</Company>
 		<Product>neonKUBE</Product>
 		<Description>INTERNAL USE ONLY: Defines internal GRPC protobuf messages and services used by neonKUBE applcations.</Description>
