--- a/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
+++ b/Lib/Neon.Kube.Operator/Neon.Kube.Operator.csproj
@@ -5,7 +5,7 @@
 		<OutputType>Library</OutputType>
 		<Configurations>Debug;Release;CodeDoc</Configurations>
 		<PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
-		<Version>10000.0.298-dev-marcus</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Authors>neonFORGE Team</Authors>
 		<Company>neonFORGE LLC</Company>
 		<Product>neonKUBE</Product>
