--- a/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
+++ b/Lib/Neon.Kube.XenServer/Neon.Kube.XenServer.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
-		<Version>2.10.0-internal</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Authors>neonFORGE Team</Authors>
 		<Company>neonFORGE LLC</Company>
 		<Product>neonKUBE</Product>
