--- a/Lib/Neon.Nats/Neon.Nats.csproj
+++ b/Lib/Neon.Nats/Neon.Nats.csproj
@@ -5,7 +5,7 @@
 		<OutputType>Library</OutputType>
 		<LangVersion>latest</LangVersion>
 		<RootNamespace>Neon.Nats</RootNamespace>
-		<Version>2.18.2</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Company>neonFORGE LLC</Company>
 		<Authors>neonFORGE Team</Authors>
 		<Description>NATS messaging extensions</Description>
