--- a/Lib/Neon.WSL/Neon.WSL.csproj
+++ b/Lib/Neon.WSL/Neon.WSL.csproj
@@ -4,7 +4,7 @@
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<OutputType>Library</OutputType>
 		<RootNamespace>Neon.WSL</RootNamespace>
-		<Version>2.18.2</Version>
+		<Version>10000.0.1650-dev-jeff</Version>
 		<Company>neonFORGE LLC</Company>
 		<Authors>neonFORGE Team</Authors>
 		<Description>INTERNAL USE ONLY: WSL2 related utilities</Description>
