--- a/Lib/Neon.Kube.Setup/Resources/Helm/cortex/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/cortex/values.yaml
@@ -66,6 +66,10 @@ cortexConfig:
   storage:
     engine: blocks
   limits:
+    enforce_metric_name: true
+    reject_old_samples: true
+    reject_old_samples_max_age: 1h
+    max_query_lookback: 0s
     ingestion_rate: 100000
     ingestion_burst_size: 250000
     max_series_per_metric: 0
@@ -103,12 +107,11 @@ cortexConfig:
     lifecycler:
       # The address to advertise for this ingester. Will be autodiscovered by
       # looking up address on eth0 or en0; can be specified if this fails.
-      address: 0.0.0.0
       min_ready_duration: 20s
       #readiness_check_ring_health: false
       # We want to start immediately and flush on shutdown.
-      join_after: 0
-      final_sleep: 0s
+      join_after: 5s
+      final_sleep: 30s
       num_tokens: 512
 
       # Use an in memory ring store, so we don't need to launch a Consul.
@@ -124,11 +127,11 @@ cortexConfig:
       max_ingestion_rate: 25000
   frontend_worker:
     match_max_concurrent: true
-    frontend_address: 0.0.0.0:9095
+    frontend_address: ${MY_POD_IP}:9095
   alertmanager:
     fallback_config_file: /etc/cortex/alertmanager.yaml
     cluster:
-      listen_address: 0.0.0.0:9094
+      listen_address: ${MY_POD_IP}:9094
     enable_api: true
     external_url: /api/prom/alertmanager
     sharding_enabled: true
@@ -148,6 +151,16 @@ cortexConfig:
       endpoint: minio.neon-system
       insecure: true
       secret_access_key: ${SECRET_ACCESS_KEY}
+  query_range:
+    split_queries_by_interval: 24h
+    align_queries_with_step: true
+    cache_results: true
+    results_cache:
+      cache:
+        redis:
+          endpoint: neon-redis.neon-system:26379
+          master_name: master
+          db: 3
   ruler:
     alertmanager_url: /api/prom/alertmanager
     external_url: /api/prom/ruler
