--- a/Lib/Neon.Kube.Setup/Resources/Helm/etcd/values.yaml
+++ b/Lib/Neon.Kube.Setup/Resources/Helm/etcd/values.yaml
@@ -63,7 +63,7 @@ memoryMode: false
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#nodeselector
 ## ref: https://kubernetes.io/docs/concepts/configuration/assign-pod-node/#taints-and-tolerations-beta-feature
 nodeSelector: 
-  neonkube.io/node.role: "master"
+  neonkube.io/monitor.metrics-internal: 'true'
 
 tolerations:
   - effect: NoSchedule
